--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,95 @@
-h1 {
-    color: red;
+.content {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-@media only screen and (max-width: 600px) {
-    h1 {
-        color: blue;
-    }
+.navbar {
+    background-color: tomato;
+}
+
+.hero {
+    background-color: green;
+    flex: 1;
+}
+
+.main {
+    background-color: white;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.skills {
+    background-color: aqua;
+    flex: 1;
+}
+
+.projects {
+    background-color: orange;
+    flex: 1;
+}
+
+.contact {
+    background-color: yellow;
+    flex: 1;
+}
+
+.footer {
+    padding: 16px;
+}
+
+.footer--purple {
+    color: white;
+    background-color: #4F47C8;
+}
+
+.footer--tomato {
+    color: white;
+    background-color: tomato;
+}
+
+.footer__wave {
+    background-color: white;
+    margin-top: -16px;
+    margin-left: -16px;
+    margin-right: -16px;
+    margin-bottom: 0;
+    color: #4F47C8;
+    pad: 0;
+    height: 100%;
+}
+
+.footer__wave_svg {
+    position: relative;
+    bottom: -5px;
+}
+
+.footer_content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-items: center;
+}
+
+.footer_social {
+    flex: 1;
+    background-color: black;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 29px;
+}
+
+.footer_social__title {}
+
+.footer_social_icons {}
+
+.footer_social_icons__icon {}
+
+.footer_more_projects {
+    flex: 1;
+    background-color: green;
 }
